menu items align to center, needs fix for drop down pixel amount

--- a/stylesheets/animations.css
+++ b/stylesheets/animations.css
@@ -87,6 +87,7 @@ nav {
 #subnav ul {
 /*  width: 615px;*/
   margin: 0 auto;
+  text-align: center;
 }
 #subnav ul li {
   transition-duration: 0.3s;
